--- a/Selenium-Basic-to-Advanced-Jan2024/pom.xml
+++ b/Selenium-Basic-to-Advanced-Jan2024/pom.xml
@@ -48,6 +48,13 @@
       <scope>test</scope>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+    <dependency>
+      <groupId>io.github.bonigarcia</groupId>
+      <artifactId>webdrivermanager</artifactId>
+      <version>5.7.0</version>
+    </dependency>
+
 
     <dependency>
       <groupId>org.apache.poi</groupId>
