--- a/Selenium-Basic-to-Advanced-Jan2024/pom.xml
+++ b/Selenium-Basic-to-Advanced-Jan2024/pom.xml
@@ -68,6 +68,14 @@
       <version>5.2.2</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+    <dependency>
+      <groupId>com.aventstack</groupId>
+      <artifactId>extentreports</artifactId>
+      <version>5.1.1</version>
+    </dependency>
+
+
 
   </dependencies>
     <build>
